# CMR

./: .travis.yml  CMRMesh.h  CMakeLists.txt  DEPENDENCIES.txt  Doxyfile  LBMStructs.h  README.md  biblio.txt  cmr2html.xsl  configure  lbm.cmr.xml  main.cpp
lib/: CMRAbstractDomain.cpp  CMRAbstractDomain.h  CMRBufferedComm.cpp  CMRBufferedComm.h  CMRComm.cpp  CMRComm.h  CMRCommFactory.h  CMRCommSchem.cpp  CMRCommSchem.h  CMRCommon.cpp  CMRCommon.h  CMRCommunication.cpp  CMRCommunication.h  CMRCommunicator.cpp  CMRCommunicator.h  CMRComposedDomain.cpp  CMRDebug.cpp  CMRDebug.h  CMRDomainStorage.cpp  CMRDomainStorage.h  CMRGeometry.cpp  CMRGeometry.h  CMRMPIComm.cpp  CMRMPIComm.h  CMRMPICommFactory.cpp  CMRMPICommFactory.h  CMRMPICommunication.cpp  CMRMPICommunication.h  CMRMPICommunicator.cpp  CMRMPICommunicator.h  CMROperation.h  CMRSpaceSplitter.cpp  CMRTypedDomain.h  CMakeLists.txt
lib/common/: CMRCommon.cpp  CMRCommon.h  CMRDebug.cpp  CMRDebug.h  CMRGeometry.cpp  CMRGeometry.h  CMRSpaceSplitter.cpp  CMRSpaceSplitter.h
lib/communication/: CMRBufferedComm.cpp  CMRBufferedComm.h  CMRComm.cpp  CMRCommFactory.h  CMRCommSchem.h  CMRMPIComm.cpp  CMRMPIComm.h  CMRMPICommFactory.cpp  CMRMPICommFactory.h  CMRMPIReduction.cpp  CMRMPIReduction.h  CMRReductionDescriptor.h
lib/domain/: CMRAbstractDomain.cpp  CMRAbstractDomain.h  CMRAbstractMemoryAccessor.h  CMRAbstractType.h  CMRCellAccessor.h  CMRDomainBuilder.h  CMRDomainMemory.h  CMRDomainStorage.cpp  CMRDomainStorage.h  CMRGenericMemoryAccessor.h  CMRMPIDomainBuilder.cpp  CMRMPIDomainBuilder.h  CMRMemoryModel.h  CMRMemoryModels.h  CMRVarSystem.cpp  CMRVarSystem.h
lib/mpi/: CMRMPIComm.h  CMRMPIDomainBuilder.h  CMRMPIReduction.h
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  main.cpp
src/compiler-v2/: Gruntfile.js  latex-entity.js  latex-formula.js  latex-parser-test.js  latex-parser.jiison  latex-parser.jison  latex-parser.js  main.js  package.json  test.txt
src/compiler-v2/libs/: CodeTreeForLoop.js  CodeTreeMathStep.js  CodeTreeNativeCode.js  Context.js  FormulaMatcher.js  LatexEntity.js  LatexFormula.js  Project.js  ProjectAction.js  ProjectCodeTree.js  ProjectConstant.js  ProjectDefinition.js  ProjectMeshVariable.js  ProjectVariable.js  TemplateFactory.js
src/compiler-v2/tests/: TestFormulaMatcher.js  TestLatexEntity.js  TestLatexFormula.js  TestProjectConstants.js  TestProjectMeshVariable.js  TestProjectVariable.js  latex-entity-test.js  latex-parser-test.js
src/compiler/common/: CMakeLists.txt  CodeTemplate.cpp  CodeTemplate.h  CodeTemplateDic.h  CodeTemplateDic_impl.h  Common.cpp  Common.h  Debug.cpp  Debug.h  Exception.cpp  Exception.h  LangDef.cpp  LangDef.h  MsgFormat.cpp  MsgFormat.h
src/compiler/definitions/: CMRGenCode.cpp  CMRGenCode.h  CMRProjectAction.cpp  CMRProjectAction.h  CMRProjectAlias.cpp  CMRProjectAlias.h  CMRProjectCallAction.cpp  CMRProjectCallAction.h  CMRProjectCode.cpp  CMRProjectCode.h  CMRProjectCodeTree.h  CMRProjectCodeTree_impl.h  CMRProjectConstant.cpp  CMRProjectConstant.h  CMRProjectContext.cpp  CMRProjectContext.h  CMRProjectDefinition.cpp  CMRProjectDefinition.h  CMRProjectEntity.cpp  CMRProjectEntity.h  CMRProjectIterator.cpp  CMRProjectIterator.h  CMRProjectMeshVar.cpp  CMRProjectMeshVar.h  CMakeLists.txt  GenCode.cpp  GenCode.h  ProjectAction.cpp  ProjectAction.h  ProjectCallAction.cpp  ProjectCallAction.h  ProjectCodeTree.h  ProjectCodeTree_impl.h  ProjectConstant.cpp  ProjectConstant.h  ProjectContext.cpp  ProjectContext.h  ProjectDefinition.cpp  ProjectDefinition.h  ProjectEntity.cpp  (+13 more)
src/compiler/old_code/: CMRCodeTree.cpp  CMRCodeTree.h  CMRGenCode.cpp  CMRGenCode.h  CMRProject.cpp  CMRProject.h  CMRProjectAction.cpp  CMRProjectConstant.cpp  CMRProjectConstant.h  CMRProjectContext.cpp  CMRProjectContext.h  CMRProjectDefinition.cpp  CMRProjectDefinition.h  CMRProjectEntity.cpp  CMRProjectEntity.h  CMRProjectEquation.cpp  CMRProjectEquation.h  CMRProjectIterator.cpp  CMRProjectIterator.h  CMRProjectTransformation.cpp  CMRProjectTransformation.h  CMRProjectVariable.cpp  CMRProjectVariable.h  CMakeLists.txt  ProjectActionOld.cpp  ProjectActionOld.h  main.cpp
src/compiler/parsor/: CMRLatexEntity.cpp  CMRLatexEntity2.cpp  CMRLatexException.cpp  CMRLatexException.h  CMRLatexFormula.cpp  CMRLatexFormula.h  CMRLatexParsorContext.cpp  CMRLatexParsorContext.h  CMRParsorBasics.cpp  CMRParsorBasics.h  CMakeLists.txt  EntityMatching.cpp  EntityMatching.h  EqDepMatrix.cpp  EqDepMatrix.h  FormulaMatcher.cpp  FormulaMatcher.h  LatexEntity.cpp  LatexEntity.h  LatexEntityOld.cpp  LatexEntityOld.h  LatexException.cpp  LatexException.h  LatexFormula.cpp  LatexFormula.h  LatexParsorContext.cpp  LatexParsorContext.h  ParsorBasics.cpp  ParsorBasics.h  TexParsor.cpp  TexParsor.h
src/compiler/project/: CMRProject.cpp  CMRProject.h  CMRProjectXMLLoader.cpp  CMRProjectXMLLoader.h  CMRXmlDoc.cpp  CMRXmlDoc.h  CMakeLists.txt
src/compiler/transformations/: CMRModelBasedReplacement.cpp  CMRModelBasedReplacement.h  CMRTransformation.cpp  CMRTransformation.h  CMRTransformationBasic.cpp  CMRTransformationBasic.h  CMRTransformationExpandExpo.cpp  CMRTransformationExpandExpo.h  (+15 more)
src/generators/: CMakeLists.txt  Makefile.in  cmr-generate.sh  cmr-raw-output.h.template  cmr-raw-reader.cpp.template  cmr.dtd  gen-animate-gif.sh.template
src/lib/: CMR.h  CMROperation.h  CMakeLists.txt
src/reader/: CMRRawReader.cpp  CMRRawReader.h  CMakeLists.txt  display.c  gen_animate_gif-2.sh  gen_animate_gif.sh  gen_animate_gif_legacy.sh  lbm_struct.h
src/texparsor/: CMRProjectIterator.cpp  CMRProjectTransformation.h  CMRProjectVariable.cpp  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  TestAbstractDomain.cpp  TestAbstractType.cpp  TestCellAccessor.cpp  TestDomainStorage.cpp  TestGenericMemoryAccessor.cpp  TestMemoryModel.cpp  TestMemoryModels.cpp  TestRect.cpp  TestVarSystem.cpp  lbm_test.cpp  lbm_test.html  lbm_test.simple  lbm_test.xml  sandbox.cpp
tests/mocks/: CMakeLists.txt  MockAbstractDomain.cpp  MockAbstractDomain.h  MockCommunicator.cpp  MockCommunicator.h  MockDomainBuilder.h  MockMpiInit.cpp
(+342 files in other folders)
